# PersonalAIToolbox1

./: .gitignore  .replit  app.py  pyproject.toml  render.yaml  requirements.txt
modules/: amv_generator.py  anime_editor.py  bug_scanner.py  chat.py
static/css/: style.css
static/js/: amv_generator.js  anime_editor.js  bug_scanner.js  chat.js  main.js
templates/: amv_generator.html  anime_editor.html  bug_scanner.html  chat.html  index.html
