[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bandit>=1.8.3",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "librosa>=0.11.0",
    "moviepy>=2.1.2",
    "numpy>=2.2.5",
    "openai>=1.79.0",
    "psycopg2-binary>=2.9.10",
    "scenedetect>=0.6.6",
    "semgrep>=1.122.0",
    "werkzeug>=3.1.3",
    "yt-dlp>=2025.4.30",
]
